test/functoria/e2e/errors/in_functor_too_many.ml
open Functoria
open E2e

let device = main "Unikernel.Make" (job @-> job @-> job @-> job)
let () = register "my-app" [ device $ noop $ noop $ noop ]
